src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

	:root {
		--background: 0 0% 100%;
		--foreground: 0 0% 3.9%;

		--card: 0 0% 100%;
		--card-foreground: 0 0% 3.9%;

		--popover: 0 0% 100%;
		--popover-foreground: 0 0% 3.9%;

		--primary: 268, 84%, 44%;
		--primary-foreground: 0 0% 98%;

		--secondary: 268, 84%, 44%;
		--secondary-foreground: 0 0% 9%;

		--muted: 0 0% 96.1%;
		--muted-foreground: 0 0% 45.1%;

		--accent: 0 0% 96.1%;
		--accent-foreground: 0 0% 9%;

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 0 0% 98%;

		--border: 0 0% 89.8%;
		--input: 0 0% 89.8%;
		--ring: 0 0% 3.9%;

		--radius: 0.5rem;
	}

	.dark {
		--background: 0 0% 3.9%;
		--foreground: 0 0% 98%;

		--card: 0 0% 3.9%;
		--card-foreground: 0 0% 98%;

		--popover: 0 0% 3.9%;
		--popover-foreground: 0 0% 98%;

		--primary: 0 0% 98%;
		--primary-foreground: 0 0% 9%;

		--secondary: 0 0% 14.9%;
		--secondary-foreground: 0 0% 98%;

		--muted: 0 0% 14.9%;
		--muted-foreground: 0 0% 63.9%;

		--accent: 0 0% 14.9%;
		--accent-foreground: 0 0% 98%;

		--destructive: 0 62.8% 30.6%;
		--destructive-foreground: 0 0% 98%;

		--border: 0 0% 14.9%;
		--input: 0 0% 14.9%;
		--ring: 0 0% 83.1%;
	}

	html,
	body {
		font-family: 'Inter', sans-serif !important;
	}
}

@layer base {
	* {
		@apply border-border m-0 p-0 outline-none list-none box-border;
	}

	body {
		@apply bg-background text-foreground;
	}

	/*scroll-bar-styles-START*/

	/* WebKit scrollbar styles (Chrome, Safari) */
	::-webkit-scrollbar {
		width: 8px;
		height: 8px;
	}

	/* Track */
	::-webkit-scrollbar-track {
		background-color: rgb(243 244 246);
		border-radius: 9999px;
	}

	/* [&::-webkit-scrollbar]:w-2
  [&::-webkit-scrollbar-track]:rounded-full
  [&::-webkit-scrollbar-track]:bg-gray-100
  [&::-webkit-scrollbar-thumb]:rounded-full
  [&::-webkit-scrollbar-thumb]:bg-gray-300
  dark:[&::-webkit-scrollbar-track]:bg-neutral-700
  dark:[&::-webkit-scrollbar-thumb]:bg-neutral-50 */

	/* Handle */
	::-webkit-scrollbar-thumb {
		background-color: rgb(209 213 219);
		border-radius: 9999px;
	}

	/* Handle on hover */
	::-webkit-scrollbar-thumb:hover {
		background: black;
	}

	/* Firefox scrollbar styles */
	* {
		scrollbar-width: thin;
		/* "auto" or "thin" */
		scrollbar-color: transparent transparent;
		/* scroll thumb and track */
	}

	/*scroll-bar-styles-END*/

	.or-tagline {
		@apply relative bg-transparent text-center z-[1];
	}

	.or-tagline::after {
		@apply content-[''] absolute border-t border-solid border-purple-20 top-[7px] right-[0%] w-[46%];
	}

	.or-tagline::before {
		@apply content-[''] absolute border-t border-solid border-purple-20 top-[7px] left-[0%] w-[46%];
	}

	.light {
		background: -moz-linear-gradient(-45deg,
				#6a12cd 0%,
				#6a12cd 40%,
				#ffffff 50%,
				#6a12cd 60%,
				#6a12cd 100%);
		background: -webkit-gradient(linear,
				left top,
				right bottom,
				color-stop(0%, #6a12cd),
				color-stop(40%, #6a12cd),
				color-stop(50%, #ffffff),
				color-stop(60%, #6a12cd),
				color-stop(100%, #6a12cd));
		background: -webkit-linear-gradient(-45deg,
				#6a12cd 0%,
				#6a12cd 40%,
				#ffffff 50%,
				#6a12cd 60%,
				#6a12cd 100%);
		background: -o-linear-gradient(-45deg,
				#6a12cd 0%,
				#6a12cd 40%,
				#ffffff 50%,
				#6a12cd 60%,
				#6a12cd 100%);
		background: -ms-linear-gradient(-45deg,
				#6a12cd 0%,
				#6a12cd 40%,
				#ffffff 50%,
				#6a12cd 60%,
				#6a12cd 100%);
		background: linear-gradient(115deg,
				#6a12cd 0%,
				#6a12cd 40%,
				#ffffff 50%,
				#6a12cd 60%,
				#6a12cd 100%);
		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4600F2', endColorstr='#4600F2', GradientType=1);
		background-repeat: no-repeat;
		background-position: 0px;
		background-size: 250%;
	}

	.truncate-2 {
		display: -webkit-box;
		-webkit-line-clamp: 2;
		-webkit-box-orient: vertical;
		overflow: hidden;
		text-overflow: ellipsis;
	}



	.light {
		animation: light 2s infinite;
		-webkit-animation: light 2s infinite;
	}

	@keyframes light {
		0% {
			background-position: -600px;
		}

		100% {
			background-position: 0px;
		}
	}

	@-webkit-keyframes light {
		0% {
			background-position: -600px;
		}

		100% {
			background-position: 0px;
		}
	}

	.bg-custom-gradient {
		@apply bg-gradient-to-b from-[#993EFF] to-[#29094F];
	}

	.form-bg {
		background: linear-gradient(0deg,
				rgba(106, 18, 205, 0.02),
				rgba(106, 18, 205, 0.02)),
			linear-gradient(180deg,
				rgba(255, 255, 255, 0.4) 1.14%,
				rgba(255, 255, 255, 0.16) 98.72%);
	}

	.tabActiveBg {
		background: linear-gradient(0deg, #ffffff, #ffffff),
			linear-gradient(0deg, rgba(106, 18, 205, 0.04), rgba(106, 18, 205, 0.04));
	}

	.default-tab {
		@apply text-sm font-medium leading-[22px] text-primary40 py-2 px-0 mr-8 cursor-pointer;
	}

	.active-tab {
		@apply text-sm leading-[22px] text-primary80 font-semibold py-2 px-0 mr-8 cursor-pointer border-b-[2.5px] border-purple-100;
	}

	s .ghost-tabs li:after {
		content: '';
		transition: width 0.3s;
		@apply w-1 bg-transparent h-[3px] relative block rounded-sm mt-2;
	}

	.ghost-tabs li.active-tab:after {
		@apply w-full bg-purple-2;
	}

	.darkSoul-glowing-button2 {
		/* margin: auto; */
		width: 250px;
		height: 47px;
		display: flex;
		border-radius: 100px;
		animation: rotation 2.5s linear 0s infinite;

		background: linear-gradient(var(--gradient-angle),
				rgba(106, 18, 205, 1),
				rgba(106, 18, 205, 0));
	}

	.darkSoul-button2 {
		width: 98%;
		height: 94%;
		background-color: rgba(255, 255, 255, 0.911) !important;
		margin: auto;
		outline: none;
		border: none;
		border-radius: 35px;
		color: rgba(38, 6, 74, 0.8);
		font-size: 14px;
		line-height: 20px;
		font-weight: 600;
		text-align: left;
		padding: 12px 16px;
		display: flex;
		align-items: center;
	}

	@keyframes rotation {
		0% {
			--gradient-angle: 0deg;
		}

		100% {
			--gradient-angle: 360deg;
		}
	}

	@property --gradient-angle {
		syntax: '<angle>';
		initial-value: 0deg;
		inherits: false;
	}

	.truncate-3 {
		display: -webkit-box;
		-webkit-box-orient: vertical;
		overflow: hidden;
		-webkit-line-clamp: 3;
		/* Number of lines to show */
	}

	.spinner {
		font-size: 18px;
		position: relative;
		display: inline-block;
		width: 1em;
		height: 1em;
	}

	.spinner.lg {
		font-size: 48px;
	}

	.spinner.center {
		position: absolute;
		left: 0;
		right: 0;
		top: 0;
		bottom: 0;
		margin: auto;
	}

	.spinner .spinner-blade {
		position: absolute;
		left: 0.4629em;
		bottom: 0;
		width: 0.074em;
		height: 0.2777em;
		border-radius: 0.0555em;
		background-color: transparent;
		-webkit-transform-origin: center -0.2222em;
		-ms-transform-origin: center -0.2222em;
		transform-origin: center -0.2222em;
		-webkit-animation: spinner-fade 1s infinite linear;
		animation: spinner-fade 1s infinite linear;
	}

	.spinner.white .spinner-blade {
		position: absolute;
		left: 0.4629em;
		bottom: 0;
		width: 0.074em;
		height: 0.2777em;
		border-radius: 0.0555em;
		background-color: transparent;
		-webkit-transform-origin: center -0.2222em;
		-ms-transform-origin: center -0.2222em;
		transform-origin: center -0.2222em;
		-webkit-animation: spinner-fade-white 1s infinite linear;
		animation: spinner-fade-white 1s infinite linear;
	}

	.spinner .spinner-blade:nth-child(1) {
		-webkit-animation-delay: 0s;
		animation-delay: 0s;
		-webkit-transform: rotate(0deg);
		-ms-transform: rotate(0deg);
		transform: rotate(0deg);
	}

	.spinner .spinner-blade:nth-child(2) {
		-webkit-animation-delay: 0.083s;
		animation-delay: 0.083s;
		-webkit-transform: rotate(30deg);
		-ms-transform: rotate(30deg);
		transform: rotate(30deg);
	}

	.spinner .spinner-blade:nth-child(3) {
		-webkit-animation-delay: 0.166s;
		animation-delay: 0.166s;
		-webkit-transform: rotate(60deg);
		-ms-transform: rotate(60deg);
		transform: rotate(60deg);
	}

	.spinner .spinner-blade:nth-child(4) {
		-webkit-animation-delay: 0.249s;
		animation-delay: 0.249s;
		-webkit-transform: rotate(90deg);
		-ms-transform: rotate(90deg);
		transform: rotate(90deg);
	}

	.spinner .spinner-blade:nth-child(5) {
		-webkit-animation-delay: 0.332s;
		animation-delay: 0.332s;
		-webkit-transform: rotate(120deg);
		-ms-transform: rotate(120deg);
		transform: rotate(120deg);
	}

	.spinner .spinner-blade:nth-child(6) {
		-webkit-animation-delay: 0.415s;
		animation-delay: 0.415s;
		-webkit-transform: rotate(150deg);
		-ms-transform: rotate(150deg);
		transform: rotate(150deg);
	}

	.spinner .spinner-blade:nth-child(7) {
		-webkit-animation-delay: 0.498s;
		animation-delay: 0.498s;
		-webkit-transform: rotate(180deg);
		-ms-transform: rotate(180deg);
		transform: rotate(180deg);
	}

	.spinner .spinner-blade:nth-child(8) {
		-webkit-animation-delay: 0.581s;
		animation-delay: 0.581s;
		-webkit-transform: rotate(210deg);
		-ms-transform: rotate(210deg);
		transform: rotate(210deg);
	}

	.spinner .spinner-blade:nth-child(9) {
		-webkit-animation-delay: 0.664s;
		animation-delay: 0.664s;
		-webkit-transform: rotate(240deg);
		-ms-transform: rotate(240deg);
		transform: rotate(240deg);
	}

	.spinner .spinner-blade:nth-child(10) {
		-webkit-animation-delay: 0.747s;
		animation-delay: 0.747s;
		-webkit-transform: rotate(270deg);
		-ms-transform: rotate(270deg);
		transform: rotate(270deg);
	}

	.spinner .spinner-blade:nth-child(11) {
		-webkit-animation-delay: 0.83s;
		animation-delay: 0.83s;
		-webkit-transform: rotate(300deg);
		-ms-transform: rotate(300deg);
		transform: rotate(300deg);
	}

	.spinner .spinner-blade:nth-child(12) {
		-webkit-animation-delay: 0.913s;
		animation-delay: 0.913s;
		-webkit-transform: rotate(330deg);
		-ms-transform: rotate(330deg);
		transform: rotate(330deg);
	}

	@-webkit-keyframes spinner-fade {
		0% {
			background-color: rgba(38, 6, 74, 1);
		}

		100% {
			background-color: transparent;
		}
	}

	@keyframes spinner-fade {
		0% {
			background-color: rgba(38, 6, 74, 1);
		}

		100% {
			background-color: #fff;
		}
	}

	@-webkit-keyframes spinner-fade-white {
		0% {
			background-color: #fff;
		}

		100% {
			background-color: transparent;
		}
	}

	@keyframes spinner-fade-white {
		0% {
			background-color: #fff;
		}

		100% {
			background-color: transparent;
		}
	}
}

